Completed stack and redraw lab

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,7 +30,8 @@ nav ul li{
 nav ul li span,
 nav ul li button {
     display: block;
-    padding: 1em;
+    font-size: .8rem;
+    padding: .5rem;
     text-align: center;
 }
 
